--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -20,23 +20,109 @@ p {
     font-style: normal;
 }
 
+a {
+    color: $nc-blue;
+    text-decoration: none;
+}
+
+.btn {
+    border-radius: 0;
+}
+
+.btn-secondary {
+    position: relative;
+
+    &:hover {
+        box-shadow: 4px 4px $nc-blue;
+
+        &:before {
+            transition: 0.5s;
+            }
+        
+    }
+}
+
+.btn-primary {
+    position: relative;
+
+    &:hover {
+        box-shadow: 4px 4px $nc-yellow;
+
+        &:before {
+            transition: 0.5s;
+            }
+        
+    }
+}
+
 //Pages 
+
+
 
 .home {
     .non-img-logo {
         display: none;
     }
+
+    .top-shape {
+        display: none;
+      }
 }
 
-.page-template-workforce-page, .page-template-leadership-consulting-page, .page-template-infrastructure-management-page, .page-template-team-page, .page-template-contact-page {
+.page-template-workforce-page, .page-template-leadership-consulting-page, .page-template-infrastructure-management-page, .page-template-team-page, .page-template-contact-page, .blog, .page-template-page-careers {
     .img-logo {
         display: none;
+    }
+
+    .top-shape {
+        position: relative;
+        padding-bottom: 27px;
+
+        img {
+            position: absolute;
+            top: 0;
+            width: 100%;
+        }
     }
 
     .clear-nav .nav-link {
         color: $nc-black;
     }
 
+}
+
+.page-template-about-page {
+
+    .non-img-logo {
+        display: none;
+    }
+    .top-shape {
+        display: none;
+    }
+}
+
+.page-template-workforce-page {
+    .leadership {
+        display: none;
+    }
+    .infrastructure {
+        display: none;
+    }
+}
+
+.page-template-leadership-consulting-page {
+    .workforce {
+        display: none;
+    }
+    .infrastructure {
+        display: none;
+    }
+}
+
+.page-template-infrastructure-management-page {
+    .workforce, .leadership {
+        display: none;
+    }
 }
 
 // Nav Bars
@@ -52,6 +138,21 @@ p {
         color: $nc-white;
     }
 
+}
+
+.dropdown-item {
+    display: block;
+    width: 100%;
+    padding: 0.25rem 1rem;
+    clear: both;
+    font-weight: 800;
+    color: $nc-black;
+    text-align: inherit;
+    text-decoration: none;
+    white-space: nowrap;
+    background-color: transparent;
+    border: 0;
+    text-align: center;
 }
 
 .custom-select{
